@@ -22,6 +22,11 @@ from the config file.  Use something like:
       ...
     },
 
+Python Bindings
+---------------
+
+Add support for `notmuch_query_add_tag_exclude`
+
 Notmuch 0.18.1 (2014-06-25)
 ===========================
 
